scrollbars only for pokki; track viewing fix

--- a/css/master.css
+++ b/css/master.css
@@ -940,21 +940,21 @@ iframe.you-tube-video,embed.you-tube-video{
 	margin-top:-12px;
 }
 /* Custom CSS scrollbar */
-::-webkit-scrollbar {
+.pokki-app ::-webkit-scrollbar {
     width: 8px;
     height: 8px;
     border-radius: 5px;
 	background: none;
 }
-::-webkit-scrollbar-track:vertical { 
+.pokki-app ::-webkit-scrollbar-track:vertical { 
     background: none; 
 }
-::-webkit-scrollbar-thumb {
+.pokki-app ::-webkit-scrollbar-thumb {
     width: 8px; 
     height: 20px;
     background: #999;
     border-radius: 5px;
 }
-::-webkit-scrollbar-button: { 
+.pokki-app ::-webkit-scrollbar-button: { 
     display: none; 
 }
